@@ -96,14 +96,15 @@ static int do_pri_inode(aufs_bindex_t bindex, struct inode *inode,
 	}
 
 	dpri("i%d: i%lu, %s, cnt %d, nl %u, 0%o, sz %llu, blk %llu,"
-	     " ct %lld, np %lu, st 0x%lx, f 0x%x, g %x%s%.*s\n",
+	     " ct %lld, np %lu, st 0x%lx, f 0x%x, v %llu, g %x%s%.*s\n",
 	     bindex,
 	     inode->i_ino, inode->i_sb ? au_sbtype(inode->i_sb) : "??",
 	     atomic_read(&inode->i_count), inode->i_nlink, inode->i_mode,
 	     i_size_read(inode), (unsigned long long)inode->i_blocks,
 	     (long long)timespec_to_ns(&inode->i_ctime) & 0x0ffff,
 	     inode->i_mapping ? inode->i_mapping->nrpages : 0,
-	     inode->i_state, inode->i_flags, inode->i_generation,
+	     inode->i_state, inode->i_flags, inode->i_version,
+	     inode->i_generation,
 	     l ? ", wh " : "", l, n);
 	return 0;
 }
@@ -192,9 +193,9 @@ static int do_pri_file(aufs_bindex_t bindex, struct file *file)
 	    && au_fi(file))
 		snprintf(a, sizeof(a), ", mmapped %d",
 			 !!au_fi(file)->fi_hvmop);
-	dpri("f%d: mode 0x%x, flags 0%o, cnt %ld, pos %llu%s\n",
+	dpri("f%d: mode 0x%x, flags 0%o, cnt %ld, v %llu, pos %llu%s\n",
 	     bindex, file->f_mode, file->f_flags, (long)file_count(file),
-	     file->f_pos, a);
+	     file->f_version, file->f_pos, a);
 	if (file->f_dentry)
 		do_pri_dentry(bindex, file->f_dentry);
 	return 0;
